--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body{
 .chatbot{
   position: fixed;
   right: 40px;
-  width: 420p;
+  width: 420px;
   transform: scale(0.5);
   opacity: 0;
   pointer-events: none;
@@ -68,6 +68,16 @@ body{
   font-size: 1.4rem;
 }
 
+.chatbot header span{
+  position: absolute;
+  right: 20px;
+  top: 50px;
+  color: #fff;
+  cursor: pointer;
+  display: none;
+  transform: translate(-50%);
+}
+
 .chatbot .chatbox{
   height: 510px;
   overflow-y: auto;
@@ -81,14 +91,13 @@ body{
 .chatbox .incoming span{
   height: 32px;
   width: 32px;
-
   color: #fff;
   align-self: flex-end;
+  justify-content: flex-end;
   background: blue;
   text-align: center;
   line-height: 32px;
   border-radius:4px;
-
   margin: 0 10px 7px 0;
 
 
@@ -102,6 +111,11 @@ body{
   padding: 12px 16px;
   border-radius: 10px 10px 0 10px;
   background: blue;
+  
+}
+
+.chatbox .outgoing{
+  justify-content: flex-end;
 }
 
 .chatbox .incoming p {
@@ -146,3 +160,19 @@ body{
 
 }
 
+@media(max-width: 768px){
+  .chatbot{
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    right: 0;
+    border-radius: 0;
+  }
+  .chatbot .chatbox{
+    height: 90%;
+  }
+}
+
+.chatbot header span{
+  display: block;
+}
