--- a/public/style.css
+++ b/public/style.css
@@ -104,6 +104,13 @@ body{
 
 }
 
+
+.chatbot.show-chatbot {
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: auto;
+}
+
 .chatbox .chat p {
   color: #fff;
   max-width: 75%;
