Added some routing to the static html files
We should think about using a framework so that the routing will be easier and more intuitive.
Frameworks will probably also lead to everything being easier later

--- a/public/header.component.html
+++ b/public/header.component.html
@@ -60,12 +60,15 @@
 <body>
 
 <div class="header">
-  <div class="logo">Sunnmørsposten</div>
+  <div class="logo">
+    <a href="/">Sunnmørsposten</a> 
+  </div>
   <nav>
-    <a href="#">Nyheter</a>
-    <a href="#">Næringsliv</a>
-    <a href="#">Sport</a>
-    <!-- Add more links here -->
+    <a href="../categories/nyheter.html">Nyheter</a>
+    <a href="../categories/næringsliv.html">Næringsliv</a>
+    <a href="../categories/sport.html">Sport</a>
+    <a href="../categories/kultur.html">kultur</a>
+  
   </nav>
   <div class="menu-toggle">☰</div>
 </div>
