Made routing so that the chatbot doesnt refresh SPA

--- a/public/header.component.html
+++ b/public/header.component.html
@@ -64,11 +64,12 @@
     <a href="/">Sunnmørsposten</a> 
   </div>
   <nav>
-    <a href="../categories/nyheter.html">Nyheter</a>
-    <a href="../categories/næringsliv.html">Næringsliv</a>
-    <a href="../categories/sport.html">Sport</a>
-    <a href="../categories/kultur.html">kultur</a>
-  
+    <a href="/categories/nyheter.html" class="nav-link">Nyheter</a>
+    <a href="/categories/næringsliv.html" class="nav-link">Næringsliv</a>
+    <a href="/categories/sport.html" class="nav-link">Sport</a>
+    <a href="/categories/kultur.html" class="nav-link">Kultur</a>
+
+    
   </nav>
   <div class="menu-toggle">☰</div>
 </div>
