--- a/public/header.component.html
+++ b/public/header.component.html
@@ -23,6 +23,7 @@
     margin-left: 20px;
     font-size: 24px;
     font-weight: bold;
+    color: white;
   }
   
   .header nav {
@@ -61,7 +62,7 @@
 
 <div class="header">
   <div class="logo">
-    <a href="/">Sunnmørsposten</a> 
+    <img src="materials/image.png" alt="A description of the image">
   </div>
   <nav>
     <a href="/categories/nyheter.html" class="nav-link">Nyheter</a>
