--- a/public/header.component.html
+++ b/public/header.component.html
@@ -23,7 +23,6 @@
     margin-left: 20px;
     font-size: 24px;
     font-weight: bold;
-    color: white;
   }
   
   .header nav {
@@ -62,7 +61,7 @@
 
 <div class="header">
   <div class="logo">
-    <img src="materials/image.png" alt="A description of the image">
+    <a href="/">Sunnmørsposten</a> 
   </div>
   <nav>
     <a href="/categories/nyheter.html" class="nav-link">Nyheter</a>
