--- a/public/style.css
+++ b/public/style.css
@@ -44,13 +44,14 @@ body {
 .chatbot {
   position: fixed;
   right: 40px;
-  width: 420px;
+  width: 370px;
+  bottom: 100px; /* Adjusted value */
   transform: scale(0.5);
   opacity: 0;
   pointer-events: none;
   background: #fff;
   overflow: hidden;
-  border-radius: 15px;
+  border-radius: 5px;
   box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1), 0 32px 64px -48px rgba(0, 0, 0, 0.5);
 }
 
@@ -82,7 +83,7 @@ body {
 }
 
 .chatbot .chatbox {
-  height: 400px; /* Fixed height for the chatbox */
+  height: 500px; /* Fixed height for the chatbox */
   max-height: calc(100vh - 200px); /* Maximum height of chatbox to fit the viewport */
   overflow-y: auto; /* Enable vertical scrollbar when content exceeds the height */
   padding: 30px 20px 10px;
