--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,19 @@ body {
   font-size: 1.4rem;
 }
 
+.article-message {
+  background-color: #f0f0f0;
+  padding: 10px;
+  margin: 5px 0;
+  border-radius: 5px;
+}
+
+.article-message a {
+  display: inline-block;
+  margin-top: 5px;
+}
+
+
 .chatbot header span {
   position: absolute;
   right: 20px;
